Add test for additional features